tests/PHPStan/Fixtures/Shape/Valid/CleanView.php
<?php

declare(strict_types=1);

namespace PTGS\TypeBridge\Tests\PHPStan\Fixtures\Shape\Valid;

/**
 * @phpstan-type _self = array{
 *     id: string,
 *     project: string,
 *     author: string,
 *     entity: string,
 *     body: string,
 *     createdAt: string,
 *     updatedAt: string,
 * }
 */
final class CleanView
{
}
